syntax = "proto3";

package chat_server_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/mukhinfa/auth/pkg/chatServer_v1;chatServer_v1";

service ChatServerV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Send(SendMessageRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
  repeated string username = 1;
}

message CreateResponse {
  int64 id = 1;
}

message SendMessageRequest{
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message DeleteRequest{
  int64 id = 1;
}